# spacetimedb-minecraft

./: .gitignore  Cargo.toml  README.md  generate-client-files.sh  publish.sh  run-server.sh
crates/mc173-module/: Cargo.toml
crates/mc173-module/src/: biome.rs  cache_world.rs  chunk.rs  chunk_cache.rs  dvec3.rs  geom.rs  i16vec3.rs  i32vec3.rs  i8vec3.rs  inventory.rs  ivec3.rs  lib.rs  path.rs  rand.rs  storage.rs  vec2.rs  world.rs
crates/mc173-module/src/block_entity/: furnace.rs  mod.rs  piston.rs  spawner.rs
crates/mc173-module/src/entity/: common.rs  mod.rs  tick.rs  tick_ai.rs  tick_attack.rs  tick_state.rs
crates/mc173-module/src/item/: mod.rs
crates/mc173-module/src/stdb/: chunk.rs  mod.rs  rand.rs  weather.rs
crates/mc173-module/src/world/: bound.rs  break.rs  explode.rs  interact.rs  loot.rs  material.rs  notify.rs  place.rs  power.rs  tick.rs  use.rs
crates/mc173-server/: Cargo.toml
crates/mc173-server/src/: chunk.rs  command.rs  entity.rs  geom.rs  main.rs  player.rs  proto.rs  server.rs  types.rs  world.rs
crates/mc173-server/src/autogen/: breaking_block.rs  chunk_event.rs  chunk_update_type.rs  generate_chunk_reducer.rs  hand_slot_packet.rs  handle_break_block_reducer.rs  handle_look_reducer.rs  item_stack.rs  light_update.rs  mod.rs  set_weather_reducer.rs  stdb_block_set_update.rs  stdb_breaking_block.rs  stdb_chunk_populated.rs  stdb_chunk_update.rs  stdb_chunk_view.rs  stdb_connection_status.rs  stdb_entity.rs  stdb_entity_tracker.rs  stdb_entity_view.rs  stdb_give_item_reducer.rs  stdb_hand_slot.rs  stdb_handle_break_block_reducer.rs  stdb_handle_hand_slot_reducer.rs  stdb_handle_lost_reducer.rs  stdb_handle_place_block_reducer.rs  stdb_human.rs  stdb_i_8_vec_2.rs  stdb_in_login_packet.rs  stdb_inventory.rs  stdb_item_stack.rs  stdb_offline_player.rs  stdb_offline_server_player.rs  stdb_place_block_packet.rs  stdb_player_window.rs  stdb_player_window_chest.rs  stdb_playing_state.rs  stdb_position_look_packet.rs  (+8 more)
crates/module/: Cargo.toml
crates/module/src/: config.rs  entitiy.rs  entity.rs  inventory.rs  lib.rs  loot.rs  offline.rs  player.rs  proto.rs  rand.rs  tick.rs  tick_state.rs  weather.rs  world.rs
(+87 files in other folders)
