[package]
name = "mc173-module"
version = "0.1.0"
edition = "2021"
description = "Minecraft beta 1.7.3 base data structures and logic for running a world"
readme = "../README.md"
homepage = "https://github.com/mindstorm38/mc173"
repository = "https://github.com/mindstorm38/mc173"
license = "Apache-2.0"
keywords = ["minecraft", "game", "backend"]
categories = ["games"]

[dependencies]
byteorder = "1.5"
indexmap = "2.0"
flate2 = "1.0"
glam = "0.24"
spacetimedb = "0.10"
log = "0.4"
thiserror = "1.0"
tracing = "0.1"
