[package]
name = "spacetime-module"
version = "0.1.0"
edition = "2021"
description = "A Minecraft server running in a SpacetimeDB module."
readme = "../README.md"
homepage = "https://github.com/clockworklabs/spacetimedb-minecraft"
repository = "https://github.com/clockworklabs/spacetimedb-minecraft"
license = "Apache-2.0"
keywords = ["minecraft", "game", "spacetimedb"]
categories = ["games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = { version = "0.10" }
log = "0.4"
mc173-module = { path = "../mc173-module" }
glam = "0.24"
rand = "0.8.5"
